--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2024/11/26/16/20241126160508-UOWXTPRS.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
